update meta data with name change

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name='pagename' content="WYST Maintenance" />
+  <meta name='pagename' content="Wellington Youth Sailing Trust" />
   <meta name="description" content="Keep track of maintenance and issues with the WYST Boats" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-  <meta name="application-name" content="WYST Boat Maintenance" />
+  <meta name="application-name" content="Wellington Youth Sailing Trust" />
 
   <!--Meta Tags for Social Media -->
-  <meta property="og:title" content="WYST Boat Maintenance" />
+  <meta property="og:title" content="Wellington Youth Sailing Trust" />
   <meta property="og:description" content="Keep track of maintenance and issues with the WYST Boats" />
   <meta property="og:image" content="assets/images/logo.png" />
   <meta property="og:url" content="https://laserflash.github.io/U23-Reports/index.html">
@@ -25,7 +25,7 @@
   <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png" />
-  <meta name="apple-mobile-web-app-title" content="WYST Maintenance" />
+  <meta name="apple-mobile-web-app-title" content="Wellington Youth Sailing Trust" />
   <meta name='apple-touch-fullscreen' content='yes' />
   <meta name="apple-mobile-web-app-capable" content="yes">
 
