Google verification meta

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
+  <meta name="google-site-verification" content="RAMxMaiqe3EPRCz25ck5uqBym_2pnI_ndLosC4YqWQ8" />
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <title>WYST</title>
