faster font load

--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,8 @@
 
   <meta name="google-site-verification" content="RAMxMaiqe3EPRCz25ck5uqBym_2pnI_ndLosC4YqWQ8" />
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
   <title>WYST</title>
   <base href="/">
 
