--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
   <title>WYST</title>
-  <base href="/">
+  <base href="/" />
 
 </head>
 
@@ -62,6 +62,7 @@
     <app-root></app-root>
   </section>
 </body>
+
 <script>
   'use strict';
   if ('serviceWorker' in navigator) {
