--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <meta name="google-site-verification" content="RAMxMaiqe3EPRCz25ck5uqBym_2pnI_ndLosC4YqWQ8" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
   <title>WYST</title>
   <base href="/" />
 
@@ -60,15 +62,6 @@
     <app-root></app-root>
   </section>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-<script>
-  WebFont.load({  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
-
-    google: {
-      families: ['Roboto']
-    }
-  });
-</script>
 
 <script>
   'use strict';
