--- a/src/index.html
+++ b/src/index.html
@@ -53,13 +53,64 @@
   <base href="/" />
 
 </head>
+<style>
+.centered {
+  display: block;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -72px;
+  margin-left: -72px;
+}
+.loading {
+		animation: loading 1s infinite;
+}
+@keyframes loading
+{
+  0%
+  {
+    transform: scale( .75 );
+  }
+  20%
+  {
+    transform: scale( 1 );
+  }
+  40%
+  {
+    transform: scale( .75 );
+  }
+  60%
+  {
+    transform: scale( 1 );
+  }
+  80%
+  {
+    transform: scale( .75 );
+  }
+  100%
+  {
+    transform: scale( .75 );
+  }
+}
 
+
+@-webkit-keyframes rotation {
+		from {
+				-webkit-transform: rotate(0deg);
+		}
+		to {
+				-webkit-transform: rotate(359deg);
+		}
+}
+</style>
 <body>
   <noscript>
   This site requires JavaScript to function
 </noscript>
   <section class="mat-typography">
-    <app-root></app-root>
+    <app-root>
+      <img class="loading centered" src="assets/images/logo.png"/>
+    </app-root>
   </section>
 </body>
 
