alt tag for loading anim image

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
 </noscript>
   <section class="mat-typography">
     <app-root>
-      <img class="loading centered" src="assets/images/logo.png"/>
+      <img class="loading centered" src="assets/images/logo.png" alt="Wellington Youth Sailing Trust Logo"/>
     </app-root>
   </section>
 </body>
