--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
   <!--Meta Tags for Social Media -->
   <meta property="og:title" content="Wellington Youth Sailing Trust" />
   <meta property="og:description" content="Keep track of maintenance and issues with the WYST Boats" />
-  <meta property="og:image" content="assets/images/logo.png" />
-  <meta property="og:url" content="https://laserflash.github.io/U23-Reports/index.html">
+  <meta property="og:image" content="assets/images/logo.webp" />
+  <meta property="og:url" content="https://wyst-stuff.tk">
 
   <!--Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png" />
@@ -47,8 +47,8 @@
 
   <meta name="google-site-verification" content="RAMxMaiqe3EPRCz25ck5uqBym_2pnI_ndLosC4YqWQ8" />
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="all" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="all" />
   <title>WYST</title>
   <base href="/" />
   <style>
@@ -104,7 +104,7 @@
 </noscript>
   <section class="mat-typography">
     <app-root>
-      <img class="loading centered" src="assets/images/logo.png" alt="Wellington Youth Sailing Trust Logo" />
+      <img class="loading centered" src="assets/images/logo.webp" alt="Wellington Youth Sailing Trust Logo" />
     </app-root>
   </section>
 </body>
