fix: images not loading
webp was only supported by chrome and opera so have now moved back to using png images for increased compatability

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <!--Meta Tags for Social Media -->
   <meta property="og:title" content="Wellington Youth Sailing Trust" />
   <meta property="og:description" content="Keep track of maintenance and issues with the WYST Boats" />
-  <meta property="og:image" content="assets/images/logo.webp" />
+  <meta property="og:image" content="assets/images/logo.png" />
   <meta property="og:url" content="https://wyst-stuff.tk">
 
   <!--Icons-->
@@ -87,7 +87,7 @@
 </noscript>
   <section class="mat-typography">
     <app-root>
-      <img class="loading centered" src="assets/images/logo.webp" alt="Wellington Youth Sailing Trust Logo" />
+      <img class="loading centered" src="assets/images/logo.png" alt="Wellington Youth Sailing Trust Logo" />
     </app-root>
   </section>
 </body>
