correct og:image url

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <!--Meta Tags for Social Media -->
   <meta property="og:title" content="Wellington Youth Sailing Trust" />
   <meta property="og:description" content="Keep track of maintenance and issues with the WYST Boats" />
-  <meta property="og:image" content="assets/images/logo.png" />
+  <meta property="og:image" content="https://wyst-stuff.tk/assets/images/logo.png" />
   <meta property="og:url" content="https://wyst-stuff.tk">
 
   <!--Icons-->
