--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,21 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name='pagename' content="Wellington Youth Sailing Trust" />
-  <meta name="description" content="Keep track of maintenance and issues with the WYST Boats" />
+  <meta name="description" content="Keep track of maintenance and issues with the NPYC Boats" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=4.0, user-scalable=1" />
   <meta name="application-name" content="Wellington Youth Sailing Trust" />
 
   <!--Meta Tags for Social Media -->
   <meta property="og:title" content="Wellington Youth Sailing Trust" />
-  <meta property="og:description" content="Keep track of maintenance and issues with the WYST Boats" />
-  <meta property="og:image" content="https://wyst-stuff.tk/assets/images/logo.png" />
-  <meta property="og:url" content="https://wyst-stuff.tk">
+  <meta property="og:description" content="Keep track of maintenance and issues with the NPYC Boats" />
+  <meta property="og:image" content="https://NPYC-stuff.tk/assets/images/logo.png" />
+  <meta property="og:url" content="https://NPYC-stuff.tk">
 
   <!--Icons-->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="assets/favicon/manifest.json">
+  <link rel="manifest" href="assets/favicon/site.webmanifest.json">
   <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="assets/favicon/favicon.ico">
   <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
@@ -32,7 +32,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="all" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="all" />
-  <title>WYST</title>
+  <title>NPYC</title>
   <base href="/" />
   <style>
     .centered {
