Update names and social media urls #10

--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name='pagename' content="Wellington Youth Sailing Trust" />
+  <meta name='pagename' content="New Plymouth Yacht Club" />
   <meta name="description" content="Keep track of maintenance and issues with the NPYC Boats" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=4.0, user-scalable=1" />
   <meta name="application-name" content="Wellington Youth Sailing Trust" />
 
-  <!--Meta Tags for Social Media
-  <meta property="og:title" content="Wellington Youth Sailing Trust" />
+  <!--Meta Tags for Social Media -->
+  <meta property="og:title" content="New Plymouth Yacht Club" />
   <meta property="og:description" content="Keep track of maintenance and issues with the NPYC Boats" />
-  <meta property="og:image" content="https://NPYC-stuff.tk/assets/images/logo.png" />
-  <meta property="og:url" content="https://NPYC-stuff.tk">
-  -->
+  <meta property="og:image" content="https://npyc-usagemaintenancetracker.firebaseapp.com/assets/images/logo.png" />
+  <meta property="og:url" content="https://npyc-usagemaintenancetracker.firebaseapp.com">
+
 
   <!--Icons-->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
