Initial MCSC changes

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name='pagename' content="TRIYA" />
-  <meta name="description" content="Keep track of maintenance and issues with the TRIYA Boats" />
+  <meta name='pagename' content="mcsc" />
+  <meta name="description" content="Keep track of maintenance and issues with the mcsc Boats" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=4.0, user-scalable=1" />
-  <meta name="application-name" content="TRIYA" />
+  <meta name="application-name" content="mcsc" />
 
   <!--Meta Tags for Social Media -->
-  <meta property="og:title" content="TRIYA" />
-  <meta property="og:description" content="Keep track of maintenance and issues with the TRIYA Boats" />
-  <meta property="og:image" content="https://TRIYA-usagemaintenancetracker.firebaseapp.com/assets/images/logo.png" />
-  <meta property="og:url" content="https://TRIYA-usagemaintenancetracker.firebaseapp.com">
+  <meta property="og:title" content="mcsc" />
+  <meta property="og:description" content="Keep track of maintenance and issues with the mcsc Boats" />
+  <meta property="og:image" content="https://mcsc-usagemaintenancetracker.firebaseapp.com/assets/images/logo.png" />
+  <meta property="og:url" content="https://mcsc-usagemaintenancetracker.firebaseapp.com">
 
 
   <!--Icons-->
@@ -34,7 +34,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" type="text/css" media="all" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css" media="all" />
-  <title>TRIYA</title>
+  <title>mcsc</title>
   <base href="/" />
   <style>
     .centered {
@@ -112,7 +112,7 @@
   </noscript>
   <section class="mat-typography">
     <app-root>
-      <img class="loading centered" src="assets/images/logo.png" alt="TRIYA Logo" />
+      <img class="loading centered" src="assets/images/logo.png" alt="mcsc Logo" />
       <div class="spinner">
         <div class="bounce1"></div>
         <div class="bounce2"></div>
